# c_bridge

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
interfaces/c/: c_bridge.h
src/: array.rs  lib.rs  null.rs  opaque.rs  result.rs  rust_box.rs
src/tests/: mod.rs  test.c
